@@ -18,6 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Multimedia :: Graphics :: Graphics Conversion",
     "Topic :: Scientific/Engineering :: GIS",
+    "Typing :: Typed",
 ]
 license = {text = "BSD-3-Clause"}
 requires-python = ">=3.9"
